@@ -1,6 +1,7 @@
 20091209
  - (dtucker) Wrap use of IPPROTO_IPV6 in an ifdef for platforms that don't
    have it.
+ - (dtucker) [defines.h] define PRIu64 for platforms that don't have it.
 
 20091208
  - (dtucker) OpenBSD CVS Sync
